--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,11 @@
   "description": "SipSpot",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node server/server.js",
+    "dev": "nodemon server/server.js",
     "test": "jest --watchAll --verbose",
     "test:once": "jest --verbose",
-    "seed": "node seeds/index.js",
+    "seed": "node server/seeds/index.js",
     "lint": "eslint .",
     "format": "prettier --write \"**/*.js\""
   },
@@ -23,27 +23,29 @@
   ],
   "author": "Yifei Xie",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
-    "dotenv": "^16.3.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "cookie-parser": "^1.4.6",
+    "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.1.5",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
     "express-validator": "^7.0.1",
-    "multer": "^1.4.5-lts.1",
-    "cloudinary": "^1.41.0",
-    "axios": "^1.6.2",
-    "joi": "^17.11.0"
+    "helmet": "^7.1.0",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.3",
     "eslint": "^8.55.0",
-    "prettier": "^3.1.1"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "prettier": "^3.1.1",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=16.0.0",
